# 2012-murphy-grn-tree-adjunct-grammars

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
investigation/: probe_force_responsiveness.py  probe_force_volatility.py  probe_signed_vs_absolute.py  probe_tendency_chatter.py  probe_tendency_degeneracy.py
results/: ContinuousDigits_Concentration_results.csv  ContinuousDigits_Tendency_results.csv  DirectMapping_Concentration_results.csv  DirectMapping_Tendency_results.csv  DiscreteDigits_Concentration_results.csv  DiscreteDigits_Tendency_results.csv  SymbolicRegression_Concentration_results.csv  SymbolicRegression_Tendency_results.csv
scripts/: validate_e2e.py
src/grntage/evolution/: __init__.py  algorithm.py  crossover.py  individual.py  mutation.py  population.py  selection.py
src/grntage/grn/: gene.py  (+5 more)
tests/: __init__.py  conftest.py
tests/golden/: grn_input_trajectory.npy  grn_settle_trajectory.npy  grn_stabilize_conv_final.npy  grn_stabilize_conv_iters.npy  grn_stabilize_final.npy
tests/test_evolution/: __init__.py  test_algorithm.py  test_crossover.py  test_individual.py  test_mutation.py  test_population.py  test_selection.py
tests/test_experiments/: __init__.py  test_analysis.py  test_generalisation.py  test_runner.py
tests/test_grammar/: test_evaluator.py  test_mapper.py
tests/test_grn/: __init__.py  test_gene.py  test_genome.py  test_golden.py  test_network.py  test_protein.py
tests/test_mapping/: __init__.py  test_mappers.py
tests/test_simulation/: test_cartpole.py  test_controller.py  test_fitness.py
(+20 files in other folders)
