[project]
name = "grntage"
version = "1.0.0"
description = "Replication of Murphy et al. (2012), 'Differential Gene Expression with Tree-Adjunct Grammars' (PPSN XII): an artificial gene-regulatory network mapped through a tree-adjunct grammar to control the inverted pendulum."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lark>=1.3.1",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "polars>=1.38.1",
    "scipy>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grntage"]

[dependency-groups]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
    "rumdl>=0.2.27",
    "ty>=0.0.15",
]
test = [
    "hypothesis>=6.151.5",
    "pytest>=9.0.2",
]

[tool.uv]
default-groups = ["test"]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra"]
testpaths = ["tests"]
# Warnings are errored: the GRN/grammar/EA path must stay warning-clean.
filterwarnings = ["error"]

[tool.mypy]

# numba ships no type stubs / py.typed marker; its decorators are untyped.
[[tool.mypy.overrides]]
module = ["numba", "numba.*"]
ignore_missing_imports = true

# Markdown linting (rumdl). GitHub Flavored Markdown, 80-char lines.
[tool.rumdl]
line-length = 80
flavor = "gfm"

# The 80-char limit applies to prose; code blocks (ASCII diagrams, aligned
# layouts) and tables can't wrap, so they are exempt from MD013.
[tool.rumdl.MD013]
code-blocks = false
tables = false
